--- a/worttrainer/build.gradle
+++ b/worttrainer/build.gradle
@@ -1,19 +1,28 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group = 'at.ac.tgm.diplomarbeit'
-version = '1.0-SNAPSHOT'
+group 'com.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    // Gson Bibliothek für JSON-Verarbeitung
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // JUnit für Tests
+    testImplementation 'junit:junit:4.13.2'
+}
+
+application {
+    // Ersetze 'com.example.TrainerUI' durch den vollständigen Pfad deiner Hauptklasse
+    mainClass = 'com.example.TrainerUI'
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
