--- a/worttrainer/build.gradle
+++ b/worttrainer/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
     // Gson Bibliothek für JSON-Verarbeitung
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.json:json:20210307'
 
     // JUnit für Tests
     testImplementation 'junit:junit:4.13.2'
